Complete refactor to work with Mac and Windows and to be faster